# trade

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
.cursor/rules/: general.mdc  project.mdc  python.mdc
data/: btc_usdt_1d_20170427_to_20250714.csv  btc_usdt_1d_20200122_to_20250714.csv  btc_usdt_1d_20221018_to_20250714.csv  btc_usdt_1h_20221018_to_20250714.csv  eth_usdt_1d_20170427_to_20250714.csv  eth_usdt_1d_20200122_to_20250714.csv  eth_usdt_1d_20221018_to_20250714.csv  eth_usdt_1h_20221018_to_20250714.csv
src/trade/: __init__.py  utils.py
src/trade/config/: __init__.py  example.py  settings.py
src/trade/notebooks/.ipynb_checkpoints/: ak_demo-checkpoint.ipynb
src/trade/notebooks/jupyter36/: 10_Stochastics.ipynb  11_Statistics_a.ipynb
src/trade/pipeline/: asset.py
src/trade/polymarket/: README.md  __init__.py  client.py  config.py  exceptions.py  storage.py  types.py
src/trade/polymarket/examples/: basic_usage.py  simple_usage.py
tests/: 02.3 Pull Exchange History.py  sample_data.csv  t_pl.py  t_prob.py  t_rv.py  t_talib.py  test_ak.py  test_backtrader.py  test_basic.py  test_bs.py  test_config.py  test_ts.py
tests/nt/: quickstart.ipynb  t1.py
tests/nt/catalog/data/currency_pair/EURUSD.SIM/: 1970-01-01T00-00-00-000000000Z_1970-01-01T00-00-00-000000000Z.parquet
tests/poly/: README.md  debug_pm.py  derive_api_key.py  generate_api_key.py  generate_markets_data_csv.py  get_all_historical_data.py  get_live_price.py  polymarket.py  t_polymarket.py
