[project]
name = "trade"
version = "0.1.0"
description = "trade"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtrader>=1.9.78.123",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.1.1",
    "baostock>=0.8.9",
    "dagster>=1.10.13",
    "dagster-webserver>=1.10.13",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "devtools>=0.12.2",
    "akshare>=1.16.86",
    "jupyterlab>=4.4.1",
    "seaborn>=0.13.2",
    "scipy>=1.8.0,<1.15.0",
    "statsmodels>=0.14.0,<0.15.0",
    "okx==2.1.2",
    "python-okx>=0.3.9",
    "ccxt>=4.4.94",
    "ta-lib>=0.6.4",
    "py-clob-client>=0.24.0",
    "aiohttp>=3.8.0",
    "websockets>=11.0.0",
    "requests>=2.32.3",
    "httpx[socks]>=0.28.1",
    "nautilus-trader>=1.219.0",
    "ibis-framework>=10.8.0",
    "web3>=7.13.0",
    "rich>=14.0.0",
]
authors = [{ name = "shiyang07ca", email = "shiyang07ca@gmail.com" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "ipdb>=0.13.13",
]
lint = ["mypy>=1.15.0", "ruff>=0.11.8"]


[[tool.uv.index]]
name = "pypi"
url = "https://mirrors.aliyun.com/pypi/simple"
verify_ssl = false


[tool.mypy]
ignore_missing_imports = true
exclude = ["manage\\.py", ".*/migrations/.*\\.py$", ".*/migrations/?$"]
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false


[[tool.mypy.overrides]]
module = ["celery.*", "redis.*"]
ignore_missing_imports = true


[tool.ruff]
lint.select = [
    "E",   # pycodestyle - Error
    "F",   # Pyflakes
    "W",   # pycodestyle - Warning
    "I",   # isort
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "N",   # pep8-naming
    "C90", # mccabe
    "UP",  # pyupgrade
    "RUF", # ruff
]
lint.ignore = [
    "E501",   # 忽略行太长的错误
    "RUF001",
    "RUF002",
    "RUF003",
]
fix = true
line-length = 88 # 设置最大行长度


[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
